Import of HACHI/POE-Adaptor-Net-LDAP-0.02 from CPAN.
gitpan-cpan-distribution: POE-Adaptor-Net-LDAP
gitpan-cpan-version:      0.02
gitpan-cpan-path:         HACHI/POE-Adaptor-Net-LDAP-0.02.tar.gz
gitpan-cpan-author:       HACHI
gitpan-cpan-maturity:     released

--- a/Todo
+++ b/Todo
@@ -1,6 +1,6 @@
 TODO list for Perl module POE::Adaptor::Net::LDAP
 
 - See TODO markers in the code
-- Lots of other stuff
-
-
+- Document more callback semantics
+- Implement connection canceling
+- Implement reconenction
