--- a/Changes
+++ b/Changes
@@ -3,4 +3,7 @@ Revision history for Perl module POE::Adaptor::Net::LDAP
 0.01 Tue Mar 30 09:37:05 2004
 	- original version; created by ExtUtils::ModuleMaker 0.32
 
-
+0.02 Sat Nov 20 05:22:23 2004
+	- major rewrite, weakref no longer necessary... destruction happens properly
+	- documentation added, woohoo!
+	- support for multiple connection attempts and failure handling added
